@@ -928,29 +928,36 @@ class DiskRefsContainer(RefsContainer):
             probe_ref = os.path.dirname(probe_ref)
 
         ensure_dir_exists(os.path.dirname(filename))
-
-        # first, check if we need to write anything at all without
-        # acquiring the lock, which triggers a fs write, close and
-        # thus fsync()
-        if self.read_loose_ref(realname) != new_ref:
-            with GitFile(filename, "wb") as f:
-                if old_ref is not None:
-                    try:
-                        # read again while holding the lock
-                        orig_ref = self.read_loose_ref(realname)
-                        if orig_ref is None:
-                            orig_ref = self.get_packed_refs().get(realname, ZERO_SHA)
-                        if orig_ref != old_ref:
-                            f.abort()
-                            return False
-                    except OSError:
-                        f.abort()
-                        raise
+        with GitFile(filename, "wb") as f:
+            if old_ref is not None:
                 try:
-                    f.write(new_ref + b"\n")
+                    # read again while holding the lock to handle race conditions
+                    orig_ref = self.read_loose_ref(realname)
+                    if orig_ref is None:
+                        orig_ref = self.get_packed_refs().get(realname, ZERO_SHA)
+                    if orig_ref != old_ref:
+                        f.abort()
+                        return False
                 except OSError:
                     f.abort()
                     raise
+
+            # Check if ref already has the desired value while holding the lock
+            # This avoids fsync when ref is unchanged but still detects lock conflicts
+            current_ref = self.read_loose_ref(realname)
+            if current_ref is None:
+                current_ref = packed_refs.get(realname, None)
+
+            if current_ref is not None and current_ref == new_ref:
+                # Ref already has desired value, abort write to avoid fsync
+                f.abort()
+                return True
+
+            try:
+                f.write(new_ref + b"\n")
+            except OSError:
+                f.abort()
+                raise
             self._log(
                 realname,
                 old_ref,
